<resources>

    <!-- Fragment labels -->
    <string name="fragment_label_game_menu">Menu</string>
    <string name="fragment_label_game_creation">New game</string>
    <string name="fragment_label_game_history">Game history</string>
    <string name="fragment_label_game_settings">Settings</string>

    <!-- Main menu -->
    <string name="app_name">Darts</string>
    <string name="menu_btn_new_game">New game</string>
    <string name="menu_btn_history">Game history</string>
    <string name="menu_btn_settings">Settings</string>
    <string name="menu_btn_exit">Exit</string>

    <!-- Game creation -->
    <string name="gc_nav_title">New game</string>
    <string name="gc_yes">Yes</string>
    <string name="gc_no">No</string>
    <string name="gc_continue">Continue</string>
    <string name="gc_starting_points">Starting points</string>
    <string name="gc_starts_with_double">Start with double</string>
    <string name="gc_301">301</string>
    <string name="gc_501">501</string>
    <string name="gc_start_game">Start game</string>
    <string name="gc_selected_players">Chosen players</string>
    <string name="gc_create_new_player">+ Create new player</string>
    <string name="gc_pick_players">Choose players</string>
    <string name="gc_no_players_yet">No created players</string>
    <string name="gc_no_players_selected">Choose at least 1 player!</string>
    <string name="gc_too_many_players_selected">Choose at most 10 players!</string>

    <!-- Player creation -->
    <string name="pc_nav_title">New player</string>
    <string name="pc_player_name">Player name</string>
    <string name="pc_option_auto_select">Choose this player to the game</string>
    <string name="pc_name_too_long">Player name at most 20 characters</string>
    <string name="pc_name_too_short">Player name at  least 3 characters</string>
    <string name="pc_create_player">Create player</string>

    <!-- Game screen -->
    <string name="gs_no_previous_turn">No earlier turn</string>
    <string name="gs_bust">WOOPS! OVER</string>
    <string name="gs_quit_game">Quit game</string>
    <string name="gs_undo">undo</string>
    <string name="gs_miss">miss</string>
    <string name="gs_previous_turns">Previous turns</string>
    <string name="gs_no_previous_turns">No previous turns</string>
    <string name="gs_is_winner">is winner!</string>

    <!-- Game history -->
    <string name="gh_nav_title">Game history</string>

    <!-- Game settings -->
    <string name="gs_nav_title">Settings</string>
    <string name="gs_lang_fin">Suomi</string>
    <string name="gs_lang_eng">English</string>
    <string name="gs_lang">Language</string>
    <string name="gs_points_speed">Points speedentry</string>
    <string name="gs_points_speed_info">If enabled, confirming doesn\'t require OK-button</string>

    <!-- Game history -->
    <string name="date">Date</string>
    <string name="history_game_name_text">Name</string>
    <string name="history_winner_text">Winner</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>