<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llStartingPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray"
        android:padding="10dp"
        android:layout_marginHorizontal="35dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gc_starting_points"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/rgStartingPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:checkedButton="@id/rbStartingPoints501">

            <RadioButton
                android:id="@+id/rbStartingPoints501"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:text="@string/gc_501"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"/>

            <RadioButton
                android:id="@+id/rbStartingPoints301"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:text="@string/gc_301"
                android:textSize="25sp"
                android:textAlignment="center"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStartWithDouble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/llStartingPoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray"
        android:padding="10dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gc_starts_with_double"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/rgStartWithDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:checkedButton="@id/rbStartWithDoubleYes">

            <RadioButton
                android:id="@+id/rbStartWithDoubleYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:text="@string/gc_yes"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"/>

            <RadioButton
                android:id="@+id/rbStartWithDoubleNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:text="@string/gc_no"
                android:textSize="24sp"
                android:textAlignment="center"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="15dp"
        android:text="@string/gc_continue"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llStartWithDouble"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>