<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/gameMenuFragment">

    <fragment
        android:id="@+id/gameMenuFragment"
        android:name="com.example.darts.gamemenu.GameMenuFragment"
        android:label="@string/fragment_label_game_menu" >
        <action
            android:id="@+id/action_gameMenuFragment_to_gameCreationFragment"
            app:destination="@id/gameCreationFragment" />
        <action
            android:id="@+id/action_gameMenuFragment_to_gameSettingsFragment"
            app:destination="@id/gameSettingsFragment" />
        <action
            android:id="@+id/action_gameMenuFragment_to_gameHistoryFragment"
            app:destination="@id/gameHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameCreationFragment"
        android:name="com.example.darts.gamecreation.GameCreationFragment"
        android:label="@string/fragment_label_game_creation" >
        <action
            android:id="@+id/action_gameCreationFragment_to_gameScreenFragment"
            app:destination="@id/gameScreenFragment" />
        <action
            android:id="@+id/action_gameCreationFragment_to_gameMenuFragment"
            app:destination="@id/gameMenuFragment" />
        <action
            android:id="@+id/action_gameCreationFragment_to_playerCreationFragment"
            app:destination="@id/playerCreationFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameSettingsFragment"
        android:name="com.example.darts.gamesettings.GameSettingsFragment"
        android:label="@string/fragment_label_game_settings" >
        <action
            android:id="@+id/action_gameSettingsFragment_to_gameMenuFragment"
            app:destination="@id/gameMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameHistoryFragment"
        android:name="com.example.darts.gamehistory.GameHistoryFragment"
        android:label="@string/fragment_label_game_history" >
        <action
            android:id="@+id/action_gameHistoryFragment_to_gameMenuFragment"
            app:destination="@id/gameMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameScreenFragment"
        android:name="com.example.darts.gamescreen.GameScreenFragment"
        android:label="GameScreenFragment" >
        <argument
            android:name="inGameSettings"
            app:argType="com.example.darts.InGameSettings" />
    </fragment>
    <fragment
        android:id="@+id/playerCreationFragment"
        android:name="com.example.darts.playercreation.PlayerCreationFragment"
        android:label="fragment_player_creation"
        tools:layout="@layout/fragment_player_creation" >
        <action
            android:id="@+id/action_playerCreationFragment_to_gameCreationFragment"
            app:destination="@id/gameCreationFragment" />
    </fragment>
</navigation>