<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvPickPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gc_pick_players"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llPlayerSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/llPlayerSelection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvPickPlayers"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateNewPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray"
        android:layout_marginHorizontal="35dp">

        <TextView
            android:id="@+id/tvNoPlayersYet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gc_no_players_yet"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateNewPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llPlayerSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        android:layout_marginHorizontal="35dp"
        android:text="@string/gc_create_new_player"
        android:backgroundTint="@color/light_gray"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="15dp"
        android:text="@string/gc_continue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btnCreateNewPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>