<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playercreation.PlayerCreationFragment">

    <include
        android:id="@+id/navigationBar"
        layout="@layout/navigation_bar_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/navigationBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/llPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pc_player_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAutoSelectPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/llPlayerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:clickable="true">

            <CheckBox
                android:id="@+id/cbAutoSelectPlayer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvAutoSelectPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pc_option_auto_select"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:paddingVertical="15dp"
            android:text="@string/gc_continue"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/llAutoSelectPlayer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>